@@ -4448,11 +4448,11 @@ int     Z_incremental_CRT(GEN *H, ulong Hp, GEN *q, ulong p);
 GEN     Z_init_CRT(ulong Hp, ulong p);
 int     ZM_incremental_CRT(GEN *H, GEN Hp, GEN *q, ulong p);
 GEN     ZM_init_CRT(GEN Hp, ulong p);
-int     ZVM_incremental_CRT(GEN *pH, GEN Hp, GEN *ptq, ulong p);
-GEN     ZVM_init_CRT(GEN Hp, ulong p);
 int     ZX_incremental_CRT(GEN *ptH, GEN Hp, GEN *q, ulong p);
 GEN     ZX_init_CRT(GEN Hp, ulong p, long v);
 GEN     ZX_radical(GEN A);
+int     ZXM_incremental_CRT(GEN *pH, GEN Hp, GEN *ptq, ulong p);
+GEN     ZXM_init_CRT(GEN Hp, long deg, ulong p);
 GEN     characteristic(GEN x);
 GEN     ffinit(GEN p, long n, long v);
 GEN     ffnbirred(GEN p, long n);
